--- a/package.json
+++ b/package.json
@@ -4,20 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "tsc -p .",
-        "test": "SET NODE_ENV=test & mocha --check-leaks -r tsconfig-paths/register -r ts-node/register \"test/**/*.spec.ts\""
+        "build": "tsc -p ."
     },
     "keywords": [],
     "author": "cheatsnake",
     "license": "MIT",
     "devDependencies": {
-        "@types/chai": "^4.2.22",
-        "@types/mocha": "^9.0.0",
         "@types/node": "^16.11.7",
-        "chai": "^4.3.4",
-        "mocha": "^9.1.3",
         "ts-node": "^10.4.0",
-        "tsconfig-paths": "^3.11.0",
         "typescript": "^4.4.4"
     },
     "dependencies": {}
