--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-    "name": "app",
+    "name": "cses-typescript",
     "version": "1.0.0",
-    "description": "",
+    "description": "Solutions for CSES problem set on typescript",
     "main": "index.js",
     "scripts": {
-        "build": "tsc -p ."
+        "build": "tsc -p .",
+        "test": "jest --detectOpenHandles --forceExit"
     },
-    "keywords": [],
+    "keywords": [
+        "CSES",
+        "Problems",
+        "Solutions",
+        "TypeScript"
+    ],
     "author": "cheatsnake",
     "license": "MIT",
     "devDependencies": {
+        "@babel/cli": "^7.17.3",
+        "@babel/core": "^7.17.4",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-typescript": "^7.16.7",
+        "@types/jest": "^27.4.0",
         "@types/node": "^16.11.7",
+        "babel-jest": "^27.5.1",
+        "jest": "^27.5.1",
+        "ts-jest": "^27.1.3",
         "ts-node": "^10.4.0",
         "typescript": "^4.4.4"
-    },
-    "dependencies": {}
+    }
 }
