--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,15 @@
 {
     "compilerOptions": {
-      "target": "es5",
-      "module": "commonjs",
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "strict": true,
-      "moduleResolution": "node",
-      "baseUrl": "./src",
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true
+        "target": "es5",
+        "module": "commonjs",
+        "outDir": "./dist",
+        "rootDir": ".",
+        "strict": true,
+        "moduleResolution": "node",
+        "baseUrl": "./src",
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true
     },
-    "exclude": [
-        "node_modules",
-        "**/*.spec.ts",
-        "dist"
-    ]
+    "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts", "dist"]
 }
